--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ header{
     height: 5vh;
     padding: 6px 30px 0px 30px;
     background-color:#dae6f2;
-    display: none;
 }
 nav {
     justify-content: space-between;
@@ -178,8 +177,13 @@ h1{
 .conteinersobremim{
     min-height: 100vh;
     width: 100%;
-    background-color:#dae6f2;
+    background-color: #dae6f2;
+    background-size: cover;
     display: flex;
+    justify-content: center;
+    padding-top: 2%;
+    position: relative;
+    z-index: 2;
 }
 
 .conteinersobremim2{
@@ -224,7 +228,7 @@ h1{
 }
 
 .descicaointer{
-    width: 60%;
+    width: 55%;
     height: 70%;
     margin-top: 70px;
     padding: 10px;
@@ -238,7 +242,7 @@ h1{
 }
 
 .descicaointer #paragrafo1 {
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-family: var(--font-poppins);
     font-weight: 700;
 }
@@ -249,13 +253,13 @@ h1{
 }
 
 .descicaointer .descricaosobremim{
-    font-size: .9rem;
+    font-size: 1rem;
     font-family: var(--font-poppins);
 }
 
 
 .conteinerendereço{
-    padding: 10px;
+    padding: 20px;
     font-family: var(--font-roboto);
     display: flex;
     justify-content: center;
@@ -263,6 +267,8 @@ h1{
     align-items: center;
     border: 1px solid var(--color-hovemenu);
     border-radius: 10px;
+    height: 400px;
+    width: 15%;
 }
 .fotoeu{
     margin-bottom: 20px;
@@ -273,7 +279,7 @@ h1{
 .fotoeu img{
     width: 100%;
     border-radius: 50%;
-    border: px solid var(--color-hovemenu);
+    border: 4px solid var(--color-hovemenu);
 }
 .conteinerendereço .enderecos span {
     color: var(--color-hovemenu);
@@ -293,7 +299,7 @@ h1{
     background-color: var(--color-font);
     color: aliceblue;
     width: 200px;
-    height: 45px;
+    height: 60px;
     border-radius: 10px;
     border: none;
     margin-top: 10px;
@@ -307,5 +313,3 @@ h1{
     border: 1px solid var(--color-font);
     transform: scale(1);
 }
-
-
